--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/presentacion-bni/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pixel in Love</title>
+    <script type="module" crossorigin src="/presentacion-bni/assets/index.0f9f66f1.js"></script>
+    <link rel="modulepreload" href="/presentacion-bni/assets/vendor.f9a211ce.js">
+    <link rel="stylesheet" href="/presentacion-bni/assets/index.2d8d54f5.css">
   </head>
   <body>
     <div class="reveal">
@@ -138,6 +141,6 @@
         </section>
       </div>
     </div>
-    <script type="module" src="/main.js"></script>
+    
   </body>
 </html>
